5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1593_2425.log
== TEST (2019-03-23 16:07:05) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(consumo+km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(consumo+km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:07:35) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(consumo km/l)
-- ERROR:
File "XXXX", line 4
    print(consumo km/l)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:07:47) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(consumo, km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(consumo, km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:09:04) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round('consumo, 3)km''/''l'))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round('consumo, 3)km''/''l'))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:09:32) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round(consumo, 3)km)
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)km)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:09:43) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round(consumo, 3)km)
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)km)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:09:57) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round(consumo, 3)'km')
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)'km')
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:10:13) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round(consumo, 3)
-- ERROR:
File "XXXX", line 5
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:10:38) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round(consumo, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:27:26) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round(consumo, 3), 'km'\'/'\)
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3), 'km'\'/'\)
                                      ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:53:33) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round(consumo, 3),\'/'\)
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3),\'/'\)
                                 ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:53:50) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round(consumo, 3),\'/\')
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3),\'/\')
                                 ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:54:28) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round(consumo, 3), 'km'/''l'')
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3), 'km'/''l'')
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:54:48) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round(consumo, 3), '/')
-- OUTPUT:
14.286 /
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:55:20) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round(consumo, 3), 'km/l')
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:55:32) 
-- CODE:
dist = float(input('Distancia:'))
comb = float(input('Combustivel:'))
consumo = dist/comb
print(round(consumo, 3), 'km/l')
-- EXECUTION TIME:
0.135496
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
